Bug 31917 - clang mq_open fortify wrapper does not handle 4 argument correctly
Summary: clang mq_open fortify wrapper does not handle 4 argument correctly
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: libc (show other bugs)
Version: 2.40
: P2 normal
Target Milestone: 2.40
Assignee: Adhemerval Zanella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-20 13:34 UTC by Adhemerval Zanella
Modified: 2024-06-27 16:36 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adhemerval Zanella 2024-06-20 13:34:35 UTC
For instance, building socat 1.8 with a yocto clang based system shows:

      ./socat-1.8.0.0/xio-posixmq.c:119:8: error: 'mq_open' is unavailable: mq_open can be called either with 2 or 4 arguments
        119 |         mqd = mq_open(name, oflag, opt_mode, NULL);
            |               ^
      [...] /usr/include/bits/mqueue2.h:66:8: note: 'mq_open' has been explicitly marked unavailable here
         66 | __NTH (mq_open (const char *__name, int __oflag, mode_t mode,
            |        ^
      1 error generated.

Where GCC correctly does not show any warning message.
Comment 1 Adhemerval Zanella 2024-06-27 16:35:26 UTC
Fixed on 2.40.